<resources>
    <string name="app_name">MixedDemos</string>

    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="ok">好的</string>

    <string name="pattern">紫陌红尘，蓦然{回首}。多少的{春花秋月};多少的{逝水沉香};多少的{海誓山盟}，如沿途的风景{花开花谢}。人世间的情缘{触痛了}多少无言的{感慨}，{情深缘浅}的风吹散了多少{相聚离散}。花开是有情，花落是无意。来者是{萍水相逢}，去者是{江湖相忘}。缘起时，我在{人群}中看到你。缘灭时，你{消失}在人群中。</string>
    <string
        name="pattern_search">Android是一种基于Linux的自由及开放源代码的操作系统，Android操作系统最初由Andy Rubin开发，主要支持手机。Android系统。随后Google以Apache开源许可证的授权方式，发布了Android的源代码。第一部Android智能手机发布于2008年10月。Android逐渐扩展到平板电脑，Android在全球的市场份额首次超过塞班系统</string>

    <string name="text_send_picture_with_num">发送(%d)</string>
    <string name="text_send_picture">发送</string>

    <string name="text_calendar_cn">%1$s年%2$s月%3$s日</string>

    <string name="viewmodel_name_tip">输入的用户名</string>
    <string name="anim_btn">执行动画</string>
    <string name="popup">弹窗</string>


    <!--            下面都是测试谷歌位置服务 >>>>>>>>>>>>     -->
    <!-- title for error alerts. -->
    <string name="error_alert_title" translatable="false">Uh-Oh!</string>
    <!-- message to show for error alerts when location bias or restriction is malformed. -->
    <string name="error_alert_message_invalid_bounds" translatable="false">Unable to parse Location Bias or Location Restriction. Expected format: "33, 128"</string>
    <!-- message to show for error alerts when a photo size field is malformed. -->
    <string name="error_alert_message_invalid_photo_size" translatable="false">Unable to parse Photo size. Expected format is integers</string>

    <string name="error_api_key" translatable="false">No API key defined in gradle.properties</string>

    <!-- Text for raw results checkbox. When checked raw return values will be displayed. -->
    <string name="display_raw_results" translatable="false">Display raw results?</string>


    <!-- MAIN ACTIVITY -->

    <!-- Button for launching autocomplete test activity. -->
    <string name="autocomplete_button" translatable="false">Autocomplete</string>

    <!-- Button for launching place and photo test activity. -->
    <string name="place_and_photo_button" translatable="false">Place and Photo</string>

    <!-- Button for launching current place test activity. -->
    <string name="current_place_button" translatable="false">Current Place</string>


    <!-- AUTOCOMPLETE -->

    <!-- Hint for the autocomplete widget's initial query and autocomplete prediction's query field. -->
    <string name="autocomplete_query_hint" translatable="false">(Initial) Query</string>

    <!-- Hint for the autocomplete widget's query field. -->
    <string name="autocomplete_hint_hint" translatable="false">Hint</string>

    <!-- Hint for the autocomplete prediction's and widget's country field. -->
    <string name="autocomplete_country_hint" translatable="false">Country</string>

    <!-- Hint Text for the autocomplete prediction's and widget's type filter field. -->
    <string name="autocomplete_type_filter" translatable="false">Type Filter</string>


    <!-- Label for the autocomplete prediction's and widget's location bias related fields. -->
    <string name="autocomplete_location_bias_label" translatable="false">Location Bias (format: -33.2, 128.2)</string>

    <!-- Label for the autocomplete prediction's and widget's location restriction related fields. -->
    <string name="autocomplete_location_restriction_label" translatable="false">Location Restriction (format: -33.2, 128.2)</string>

    <!-- Hint for the autocomplete prediction's and widget's location southwest field. -->
    <string name="autocomplete_location_south_west_hint" translatable="false">South West (lat, lng)</string>

    <!-- Hint for the autocomplete prediction's and widget's location northeast field. -->
    <string name="autocomplete_location_north_east_hint" translatable="false">North East (lat, lng)</string>


    <!-- Text for enabling autocomplete prediction's and widget's type filter field. -->
    <string name="autocomplete_use_type_filter" translatable="false">Use TypeFilter?</string>

    <!-- Text for enabling autocomplete prediction's use of session tokens. -->
    <string name="autocomplete_use_session_token" translatable="false">(Predictions-only) Use session token?</string>

    <!-- Text for autocomplete activity mode (overlay or fullscreen) checkbox. -->
    <string name="autocomplete_activity_overlay_mode" translatable="false">(Activity-only) Overlay mode?</string>

    <!-- Text for the autocomplete support fragment section label. -->
    <string name="autocomplete_support_fragment_text_label" translatable="false">Autocomplete Support Fragment:</string>

    <!-- Text for the autocomplete fragment section label. -->
    <string name="autocomplete_fragment_text_label" translatable="false">Autocomplete Fragment:</string>

    <!-- Text for the autocomplete support fragment update button. -->
    <string name="autocomplete_support_fragment_update_button" translatable="false">Update Support Fragment</string>

    <!-- Text for the autocomplete fragment update button. -->
    <string name="autocomplete_fragment_update_button" translatable="false">Update Fragment</string>

    <!-- Text for starting the autocomplete activity button. -->
    <string name="autocomplete_activity_button" translatable="false">Open Activity</string>

    <!-- Text for the fetch autocomplete predictions submit button. -->
    <string name="fetch_autocomplete_predictions_button" translatable="false">Fetch Predictions</string>


    <!-- FETCH PLACE AND PHOTO -->

    <!-- Hint for the place ID field. -->
    <string name="place_id_field_hint" translatable="false">Enter place ID</string>

    <!-- Text for the fetch place and photo button. -->
    <string name="fetch_photo_checkbox" translatable="false">Also fetch photo?</string>

    <!-- Hint for the fetch photo max width field. -->
    <string name="photo_max_width_hint" translatable="false">Photo Max Width</string>

    <!-- Text for the fetch photo max height field. -->
    <string name="photo_max_height_hint" translatable="false">Photo Max Height</string>

    <!-- Text for the fetch place and photo button. -->
    <string name="use_custom_photo_reference" translatable="false">Use custom Photo Reference?</string>

    <!-- Text for the fetch place and photo button. -->
    <string name="custom_photo_reference_hint" translatable="false">Custom Photo Reference</string>

    <!-- Text for checkbox to set custom list of Place Fields. -->
    <string name="use_custom_fields" translatable="false">Manually set Place Fields?</string>

    <!-- Text for the fetch place and photo button. -->
    <string name="fetch_place_and_photo_button" translatable="false">Fetch Place and Photo</string>


    <!-- FIND CURRENT PLACE -->

    <!-- Text for the find current place submit button. -->
    <string name="find_current_place_button" translatable="false">Find Current Place</string>


</resources>
