<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="40dp"
    android:background="@drawable/bg_corner15_blue"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/contentPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="76dp"
        android:orientation="vertical"
        android:paddingLeft="28dp"
        android:paddingTop="20dp"
        android:paddingRight="28dp"
        android:paddingBottom="22dp">

        <ImageView
            android:id="@+id/alertIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/app_name"
            android:visibility="gone"
            tools:src="@mipmap/ic_launcher"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/alertTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:textColor="?attr/titleTxtColor"
            android:textSize="?attr/titleTxtSize"
            android:textStyle="bold"
            android:visibility="gone"
            tools:text="我是标题，试一试非常非常长的一个标题看看如何换行"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/alertMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:maxLines="5"
            android:textColor="?attr/msgTxtColor"
            android:textSize="?attr/msgTxtSize"
            android:visibility="gone"
            tools:text="我是内容"
            tools:visibility="visible" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/customPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:id="@+id/btnPanelDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/dividerColor" />

    <LinearLayout
        android:id="@+id/buttonsPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnLeft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="?attr/btnTxtColor"
            android:textSize="?attr/btnTxtSize"
            android:visibility="gone"
            tools:text="@string/confirm"
            tools:visibility="visible" />

        <View
            android:id="@+id/btnDivider"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?attr/dividerColor"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/btnRight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="?attr/btnTxtColor"
            android:textSize="?attr/btnTxtSize"
            android:visibility="gone"
            tools:text="@string/cancel"
            tools:visibility="visible" />

    </LinearLayout>

</LinearLayout>